docs: 更新產品發布檢查表、平台支援聲明與 roadmap (#152)
README/README.en 的技術棧仍寫著升級前的 Spring Boot 3.5.16／Spring AI 1.1.8，
與 pom.xml 實際的 4.1.0／2.0.0 不符，一併修正並補上其他過期陳述（目錄結構
仍列已移除的 start-board.sh、已刪除的 dev-isolation.md；已知限制仍宣告
「無排程備份」「無 commit hash」等已解決的舊缺陷）。

新增支援平台與 CPU 架構表（Windows/macOS/Linux x64、macOS 另有 arm64），
明示三平台 release CI 與免 JDK 安裝器已完成程式碼/CI 層級驗證但因本批未
push 而從未真正發布過、Windows Sandbox 乾淨環境驗收（#163）尚未執行。

roadmap.md：#34（Spring Boot 4/Spring AI 2 升級）已完成但仍列在「尚未排程」，
搬移至已完成並記錄實際觸發原因；重寫「下一批 v3.2.0」段落反映 #144-#151
已取代原「只出 Windows zip」規劃，新增「未解決的產品發布缺口」表格按優先序
列出五項缺口（release 從未觸發、Sandbox 未驗收、Codex Git marketplace 未通、
Desktop 版未驗證、RoleSeeder 未修）。